--- a/React/react-admin-antd/src/style/index.less
+++ b/React/react-admin-antd/src/style/index.less
@@ -25,10 +25,13 @@ body {
     padding: 16px;
 }
 .w200{
-    width: 200px !important;
+    width: 200px !important
 }
 .ml10{
     margin-left: 10px;
+}
+.mr10{
+    margin-right: 10px;
 }
 .mr0{
     margin-right: 0px !important;
@@ -47,6 +50,15 @@ body {
 }
 .mt20{
     margin-top: 20px;
+}
+.mb10{
+    margin-bottom: 10px;
+}
+.mb20{
+    margin-bottom: 20px;
+}
+.wB100{
+    width: 100% !important;
 }
 .hand{
     cursor: pointer;
@@ -88,4 +100,50 @@ body {
     padding: 20px;
     background: #FFFFFF;
     border-radius: 10px;
+}
+.itemCenter{
+    display: flex;
+    align-items: center;
+}
+.justifyBetween{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.justifyAround{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.justifyCenter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.justifyRight{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.itemEnd{
+    display: flex;
+    align-items: flex-end;
+}
+.pointer{
+    cursor: pointer !important;
+}
+.disFlex{
+    display: flex !important;
+}
+.colorNormal{
+    color: #1890ff;
+}
+.colorDanger{
+    color: #F56C6C;
+}
+.colorSuccess{
+    color: #67C23A;
+}
+.colorWarning{
+    color: #ffba00;
 }
