--- a/React/react-admin-antd/src/views/workbench/components/index.less
+++ b/React/react-admin-antd/src/views/workbench/components/index.less
@@ -76,3 +76,16 @@
     }
   }
 }
+
+.card-item{
+  padding: 20px;
+  border: 1px solid #d7dae2;
+  border-radius: 8px;
+  margin: 10px 0px;
+  &:hover{
+    cursor: pointer;
+  }
+}
+.selected{
+  border: 1px solid #1890ff;
+}
